--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^5.3.1",
     "firebase-tools": "^4.0.3",
     "g": "^2.0.1",
+    "npm": "^6.3.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
